--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Configurações do banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/contact-api
+spring.datasource.username=root
+spring.datasource.password=Vinicius*1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Configuração do Hibernate
+spring.jpa.hibernate.ddl-auto=update
